# binding_of_briatte

./: .gitignore  CMakeLists.txt  README.md  app  app.sh  items.itbob  main.c
documentation/: .~lock.convention_de_codage.docx#
projet_part_3/: main.c  more-string.c  read_monster.c
ressources/characters/: characters_config.list
ressources/items/: items.itbob
ressources/maps/: config.rtbob  config2.rtbob  config_example.rtbob  pd.rtbob  test2.rtbob  test3.rtbob
ressources/monsters/: monster.mtbob
ressources/read_monsters/: read_monster.c  read_monster.h
ressources/splash_art/: splash_art.txt
sdlTest/: sedlTest.c  sedlTest.h
sources/cli/: cli_commands.c  cli_commands.h  splash_art.txt
sources/file_extension_checker/: file_extension_checker.c  file_extension_checker.h
sources/file_mapping/: file_mapping.c  file_mapping.h
sources/game_run/: game_run.c  game_run.h
sources/generate_etage/: generate_etage.c  generate_etage.h
sources/itemCrud/: itemCrud.c  itemCrud.h  save
sources/monster_CRUD/: read_monster.c
sources/more-string/: more-string.c  more-string.h
sources/more_string/: more-string.c  more-string.h
sources/read_monsters/: read_monster.c  read_monster.h
